# iggytop

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  create_knowledge_graph.py  docker-compose.yml  pyproject.toml  zenodo_update.py
.github/workflows/: upload_airr_to_zenodo.yml
config/: biocypher_config.yaml  biocypher_docker_config.yaml  schema_config.yaml
data/: iedb_test.csv  iedb_test.xlsx  mcpas_test.csv  vdjdb_test.tsv
notebooks/: 1_create_and_save_kg.ipynb  1_scirpy_test_notebook.ipynb  2_scirpy_test_notebook.ipynb  2_statistics_dbs.ipynb
tcr_epitope/adapters/: base_adapter.py  cedar_adapter.py  constants.py  iedb_adapter.py  mapping_utils.py  mcpas_adapter.py  neotcr_adapter.py  tcr3d_adapter.py  trait_adapter.py  utils.py  vdjdb_adapter.py
