[tool.poetry]
name = "tcr-epitope"
version = "0.1.0"
description = "Immune repertoire information retrieval and integration"
authors = [
    "Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>",
    "Lisa Dratva",
    "Martin Kim",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
biocypher = { git = "https://github.com/biocypher/biocypher.git", branch = "pandas" }
pandas = "^2.0.1"
PyGithub = "^1"
requests = "^2"
pooch = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
